<resources>
    <string name="app_name">LiveScore</string>
    <string name="live_score_match">Live Score Match</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="colon">:</string>
    <string name="add_score">Add Score</string>
    <string name="reset">Reset</string>
    <string name="result">Result</string>
    <string name="winner_name">Winner name</string>
    <string name="the_winner_is">The winner is</string>
    <string name="start_again">Start Again</string>
    <string name="see_result">See Result</string>
</resources>